--- a/tools.shop.css
+++ b/tools.shop.css
@@ -140,7 +140,7 @@ table.table .image { margin-right: 10px; width: 48px; }
 table.table .badge { font-size: 0.8em; width: 24px; height: 24px; padding: 3px 3px 4px; border: 0; }
 table.table .badge span { display: block; width: 20px; overflow: hidden; padding-top: 6px; padding-left: 3px; }
 
-table.cart td { vertical-align: top; padding: 20px 7px 25px; }
+table.cart td { vertical-align: top; padding: 20px 7px 5px; }
 table.cart td input.qty { max-width: 50px; text-align: right; }
 table.cart td.total { font-size: 1.3em; }
 
@@ -268,7 +268,7 @@ h1 .order-status { font-size: 0.75em; margin-left: 10px; }
 
 .dialog { display: none; }
 .dialog-background { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: #fff; opacity: 0.8; filter: alpha(opacity=80); z-index: 99; }
-.dialog-window .cart { position: fixed; top: 15%; left: 0; right: 0; opacity: 1; z-index: 100; overflow-x: hidden; box-shadow: 0 3px 15px #ddd; margin: 0 auto; text-align: left; width: 400px; bottom: 15%; background: #ceb; padding: 25px; }
+.dialog-window .cart { position: fixed; top: 15%; left: 0; right: 0; opacity: 1; z-index: 100; overflow-x: hidden; box-shadow: 0 3px 15px #ddd; margin: 0 auto; text-align: left; width: 400px; bottom: 15%; background: #FFF; padding: 25px; }
 .dialog-window .cart .added2cart { font-size: 1.1em; font-style: italic; }
 .dialog-window .dialog-close { float: right; color: #5a5; text-decoration: none; font-size: 200%; margin-top: -3px; }
 
@@ -287,4 +287,11 @@ ul.product-menu{
 
 ul.product-menu li{
     display: inline-block;
+}
+#gallery img{
+    margin: 0 auto;
+}
+
+.rating{
+    float: left;
 }
