--- a/tools.shop.css
+++ b/tools.shop.css
@@ -1,4 +1,4 @@
-
+v
 
 .sidebar { padding-top: 44px; }
 .sidebar.left300px { width: 270px; float: left; }
@@ -128,7 +128,7 @@ table.table tr.service td { padding-top: 5px; padding-bottom: 5px; padding-left:
 .gallery .image { float: left\9; /* IE8 */ }
 
 .badge { background: #fff; border-radius: 50%; border: 4px double rgba(0,0,0,0.3); width: 100px; height: 100px; transform: rotate(-13deg); -webkit-transform: rotate(-13deg); -moz-transform: rotate(-13deg); -o-transform: rotate(-13deg); box-shadow: 0 3px 10px rgba(0,0,0,0.3); color: #000; font-weight: bold; font-style: italic; font-size: 1.6em; padding: 11px 13px 15px; }
-.badge span { display: block; vertical-align: middle; text-align: center; line-height: 1.2em; padding-top: 40px; }
+.badge span { display: block; vertical-align: middle; text-align: center; line-height: 1.2em; padding-top: 25px; }
 .badge.new { background: #ff4; color: #000; }
 .badge.bestseller { background: #74ff30; color: #030; }
 .badge.low-price { background: #ffc2e3; color: #300; }
@@ -291,7 +291,19 @@ ul.product-menu li{
 #gallery img{
     margin: 0 auto;
 }
+.viewed_product{
+    margin-bottom: 10px;
+}
+.viewed_product .image a{
+    display: block;
+    width: 90px;
+    text-align: center;
+}
 
-.rating{
-    float: left;
+.sidebar_product .image{
+    margin-right: 10px;
+    margin-bottom: 10px;
+    width: 90px;
+    height: 90px;
+    text-align: center;
 }
