--- a/tools.shop.css
+++ b/tools.shop.css
@@ -118,15 +118,15 @@ table.table tr.service td { padding-top: 5px; padding-bottom: 5px; padding-left:
 .related h3 input { font-size: 14px; }
 
 .image { position: relative; display: inline-block; max-width: 100%; display: block\9; /* IE8- hack */ }
-.image img { max-width: 100%; height: auto; }
-.image .corner { position: absolute; z-index:10; font-size: 0.8em; color: #fff; font-weight: bold; }
-.image .corner.top { top:-5px; }
+.image img { max-width: 100%; height: auto; max-height:100%; }
+.image .corner { position: absolute; z-index:10; font-size: 0.8em; color: #fff; font-weight: bold; line-height: 20px;}
+
 .image .corner.bottom { bottom:-5px; }
 .image .corner.left { left:-8px; }
 .image .corner.right { right:-8px; }
 .image .loading { opacity: 0.7; }
 .gallery .image { float: left\9; /* IE8 */ }
-
+/*
 .badge { background: #fff; border-radius: 50%; border: 4px double rgba(0,0,0,0.3); width: 100px; height: 100px; transform: rotate(-13deg); -webkit-transform: rotate(-13deg); -moz-transform: rotate(-13deg); -o-transform: rotate(-13deg); box-shadow: 0 3px 10px rgba(0,0,0,0.3); color: #000; font-weight: bold; font-style: italic; font-size: 1.6em; padding: 11px 13px 15px; }
 .badge span { display: block; vertical-align: middle; text-align: center; line-height: 1.2em; padding-top: 25px; }
 .badge.new { background: #ff4; color: #000; }
@@ -139,7 +139,7 @@ ul.thumbs .badge span { width: 68px; margin-top: 28px; overflow: hidden; padding
 table.table .image { margin-right: 10px; width: 48px; }
 table.table .badge { font-size: 0.8em; width: 24px; height: 24px; padding: 3px 3px 4px; border: 0; }
 table.table .badge span { display: block; width: 20px; overflow: hidden; padding-top: 6px; padding-left: 3px; }
-
+*/
 table.cart td { vertical-align: top; padding: 20px 7px 5px; }
 table.cart td input.qty { max-width: 50px; text-align: right; }
 table.cart td.total { font-size: 1.3em; }
