--- a/tools.shop.css
+++ b/tools.shop.css
@@ -1,4 +1,4 @@
-v
+
 
 .sidebar { padding-top: 44px; }
 .sidebar.left300px { width: 270px; float: left; }
@@ -46,8 +46,13 @@ div.cart.fixed a { }
 .sub-categories { margin-bottom: 20px; }
 
 .filters { padding: 15px; }
-.filters input[type="text"] { font-size: 0.9em; width: 80px; text-align: right; }
-
+.filters input[type="text"] { font-size: 0.9em; width: 46%; text-align: center; }
+.price_slider {
+    margin: 10px 0px;
+}
+.ui-slider-horizontal {
+    margin-top: 7px;
+}
 /* Product info and lists */
 
 .tags.cloud { text-align: center; font-size: 0.9em; padding-top: 20px; margin-top: 30px; border-top: 1px solid #ccc; }
@@ -104,10 +109,12 @@ ul.thumbs li.selected img { border: 4px solid #FDDA3B; margin: -4px -2px -2px -4
 ul.thumbs li.highlighted { background: inherit; }
 ul.thumbs li.highlighted img { -moz-box-shadow: 0px 0px 10px #fe2; -webkit-box-shadow: 0px 0px 10px #fe2; box-shadow: 0px 0px 10px #fe2; }
 
-table.table { width: 100%; border-spacing:0; border-collapse:collapse; }
+table.table { width: 100%; border-spacing:0; border-collapse:collapse; overflow: hidden;overflow-x: auto;}
 table.table th { padding-left: 7px; padding-right: 7px; }
 table.table td { padding: 15px 7px; border-bottom: 1px solid #ddd; }
-table.table td.min-width { width: 1%; }
+td.min-width {
+    width: 126px;
+}
 table.table td p { margin: 0; }
 table.table td input.numerical { width: 50px; margin-right: 5px; text-align: right; }
 table.table tr.no-border td { border: none; }
@@ -141,7 +148,7 @@ table.table .badge { font-size: 0.8em; width: 24px; height: 24px; padding: 3px 3
 table.table .badge span { display: block; width: 20px; overflow: hidden; padding-top: 6px; padding-left: 3px; }
 */
 table.cart td { vertical-align: top; padding: 20px 7px 5px; }
-table.cart td input.qty { max-width: 50px; text-align: right; }
+
 table.cart td.total { font-size: 1.3em; }
 
 .options { line-height: 1.8em; }
@@ -172,6 +179,31 @@ table.features tr.divider td { border-bottom: 1px solid #ccc; padding-left: 0; p
 .checkout ul.checkout-options li .wa-form { margin-top: 0px; margin-bottom: 30px; }
 .checkout ul.checkout-options li .wa-form label input[type="radio"] { position: static; }
 
+
+.product-sidebar .cart { padding: 25px; }
+.purchase { margin-bottom: 20px; padding: 0; }
+.options { line-height: 2em; }
+.options .inline-select { margin-bottom: 15px; }
+.options .inline-select a { border: 1px solid rgba(0,0,0,0.1); border-radius: 3px; margin: 0 5px 5px 0; display: inline-block; padding: 5px 12px; background: rgba(0,0,0,0.1); text-decoration: none; font-weight: bold; position: relative; min-width: 22px; text-align: center; }
+.options .inline-select a:hover { background-color: rgba(0,0,0,0.2); }
+.options .inline-select a .color_name { display: none; position: absolute; bottom: -22px; left: 50%; font-size: 0.6em; color: rgba(0,0,0,0.7); margin-left: -40px; width: 80px; }
+.options .inline-select a .color_checkmark { display: none; position: absolute; top: 7px; left: 10px; }
+.options .inline-select a.active { border: 1px solid #000; box-shadow: 0 2px 4px -2px rgba(0,0,0,0.4);
+                                   background: rgba(0,0,0,0.15) -moz-linear-gradient(top, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0.0) 100%); /* FF3.6+ */
+                                   background: rgba(0,0,0,0.15) -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.7)), color-stop(100%,rgba(255,255,255,0.0))); /* Chrome,Safari4+ */
+                                   background: rgba(0,0,0,0.15) -webkit-linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.0) 100%); /* Chrome10+,Safari5.1+ */
+                                   background: rgba(0,0,0,0.15) -o-linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.0) 100%); /* Opera 11.10+ */
+                                   background: rgba(0,0,0,0.15) -ms-linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.0) 100%); /* IE10+ */
+                                   background: rgba(0,0,0,0.15) linear-gradient(to bottom, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.0) 100%); /* W3C */
+                                   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde992', endColorstr='#fcd630',GradientType=0 ); /* IE6-9 */
+                                   color: #000 !important; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); }
+.options .inline-select a.active .color_name { display: block; }
+.options .inline-select a.active .color_checkmark { display: block; }
+.services { margin-bottom: 20px; line-height: 1.4em; }
+.aux { padding: 15px; font-size: 0.9em; }
+.added2cart { display: block; padding-top: 5px; font-style: italic; }
+
+
 .checkout .checkout-result { padding: 80px 0 60px; background: #fff; text-align: center; }
 .checkout .checkout-result h1 { font-size: 4em; margin-bottom: 50px; }
 .checkout .checkout-result.error h1 { color: red; }
@@ -181,7 +213,7 @@ table.features tr.divider td { border-bottom: 1px solid #ccc; padding-left: 0; p
 
 
 .checkout .checkout-step h2.upcoming a:hover { color: #000 !important; cursor: default; }
-.checkout .checkout-step h2 a.hint { font-size: 0.5em; color: #aaa; text-decoration: underline; }
+.checkout .checkout-step h2 a.hint { font-size: .7em; color: #aaa; text-decoration: underline; }
 .checkout .checkout-step-content { padding: 20px; background: #fff; }
 .checkout .checkout-step ul.menu-v { margin-left: 0; margin-top: 20px; }
 .checkout .checkout-step #login-form h1 { display: none; }
@@ -217,12 +249,12 @@ table.features tr.divider td { border-bottom: 1px solid #ccc; padding-left: 0; p
 .reviews ul.menu-h.auth-type li { padding-right: 10px; }
 .reviews ul.menu-h.auth-type li a { padding: 5px 6px; }
 .reviews ul.menu-h.auth-type li a img { top: 0; }
-.reviews textarea { height: 100px; min-height: 100px; width: 75%; margin-top: 0; }
+.reviews textarea { height: 100px; min-height: 100px; width: 65%; margin-top: 0; }
 
 .review-form { padding: 0; margin-bottom: 30px; }
 .review-form h4 { margin: 0 0 20px; font-weight: normal; }
 .review-form-fields p { margin: 0 0 10px; }
-.review-form-fields p.review-field a { display: inline; padding: 0; text-decoration: none; }
+.review-form-fields p.review-field a { /*display: inline;*/ padding: 0; text-decoration: none;    overflow: visible !important; }
 .review-form-fields label { width: 160px; display: block; clear: left; float: left; margin: 0 10px 0 0; color: #aaa;}
 .review-form-fields input[type="text"] { width: 20em;}
 .review-form textarea { min-width: 70%; min-height: 160px; }
@@ -233,7 +265,7 @@ table.features tr.divider td { border-bottom: 1px solid #ccc; padding-left: 0; p
 .review-form label { width: 160px; display: block; clear: left; float: left; margin: 0 10px 0 0; color: #AAA; }
 .reviews span.rate { line-height: 1.3em; display: block; margin: 0.5em 0; }
 .reviews span.rate a { text-decoration: none !important; }
-.reviews span.rate .icon10 { background-repeat: no-repeat; background-image: url(../../../../wa-content/img/icon10.png); height: 10px; width: 10px; display: inline-block; text-indent: -9999px; }
+.reviews span.rate .icon10 { background-repeat: no-repeat; background-image: url(img/icon10.png); height: 10px; width: 10px; display: inline-block; text-indent: -9999px; }
 .reviews span.rate .icon10.star { background-position: -60px -40px; }
 .reviews span.rate .icon10.star-empty { background-position: -80px -40px; }
 
@@ -260,17 +292,11 @@ h1 .order-status { font-size: 0.75em; margin-left: 10px; }
 .icon16.saved { background-image: url("img/icons.png");  background-position:-112px 0; }
 .icon16.stock-red { background-image: url("img/icons.png"); background-position:-128px 0; }
 .icon16.stock-yellow { background-image: url("img/icons.png"); background-position:-144px 0; }
-.icon16.stock-green { background-image: url("img/icons.png"); background-position:-160px 0; }
+
 .icon16.stock-transparent { background-image: url("img/icons.png"); background-position:-176px 0; }
 .icon16.loading { background-image: url("img/loading16.gif"); background-position:0 0; }
 
-/* Dialog */
 
-.dialog { display: none; }
-.dialog-background { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: #fff; opacity: 0.8; filter: alpha(opacity=80); z-index: 99; }
-.dialog-window .cart { position: fixed; top: 15%; left: 0; right: 0; opacity: 1; z-index: 100; overflow-x: hidden; box-shadow: 0 3px 15px #ddd; margin: 0 auto; text-align: left; width: 400px; bottom: 15%; background: #FFF; padding: 25px; }
-.dialog-window .cart .added2cart { font-size: 1.1em; font-style: italic; }
-.dialog-window .dialog-close { float: right; color: #5a5; text-decoration: none; font-size: 200%; margin-top: -3px; }
 
 
 /************************/
@@ -306,4 +332,124 @@ ul.product-menu li{
     width: 90px;
     height: 90px;
     text-align: center;
+}
+
+.q-mini{
+    height: 37px !important;
+    width: 31px;
+    text-align: center;
+    margin-top: -3px;
+}
+.align-center{
+    text-align: center;
+}
+.align-right{
+    text-align: right;
+}
+@media (max-width:767px){
+    .table.cart tr{
+        border: 1px solid #C5C5C5;
+    }
+    .table.cart tr td:nth-child(2){ height:101px; }
+    .table.cart td{ border:none;position:relative;width:50%;float:left;white-space:normal; }
+    .table.cart td.cart_delete{width:100%;clear:both;text-align:right;padding: 0 10px;}
+    .table img{
+        max-height: 82px;
+        margin: 0 auto;
+        display: block;
+    }
+}
+.mini-cart-info{
+    max-height: 350px;
+    overflow-y: auto;
+}
+.table td.item-total {
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    white-space: nowrap;
+    line-height: 37px;
+}
+.table>tbody>tr>td{
+    vertical-align: middle;
+}
+.cart_delete{
+    text-align: right;
+}
+.cart_delete a{
+    font-size: 23px;
+}
+.quantity_td a span{
+    padding: 5px 8px;
+}
+td.cart-total{
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    white-space: nowrap;
+    line-height: 37px;
+}
+
+@media (min-width: 768px) and (max-width: 1001px) {
+    .quantity_td  a{
+        display: none;
+    }
+    .wa-form .wa-field .wa-value{
+        margin-left: 127px;
+    }
+    .wa-form .wa-field .wa-name{
+        width: 120px;
+    }
+}
+@media (max-width: 767px) {
+    #inner_content{
+        padding: 2% 0;
+    }
+    .checkout .checkout-step-content{
+        padding: 7px;
+    }
+    .product-menu{
+        display: none;
+    }
+    .review-form label{
+        width: 116px;
+    }
+    .review-form textarea {
+        min-width: 100%;
+    }
+    .review-form .review-submit {
+        padding: 0 0 20px 0px;
+    }
+    .discount td{ 
+        float: left;
+    }
+    .discount td:nth-child(1){
+        width: 100%;
+    }
+    .discount td:nth-child(1) div{
+        width: 80%;   
+    }
+    .TOTAL td{width: 100%;float: left;}
+    .cart-total.align-center{
+        text-align: left;
+    }
+}
+.dialog-window #product-image{
+    display: inline-block;
+    vertical-align: top;
+}
+.dialog-window .product-section{
+    display: inline-block;
+    width: 67%;
+    overflow: hidden;
+}
+.dialog-window .price{
+    font-size: 18px;
+    color: #000000;
+    padding: 11px 22px;
+}
+a.show_all {
+    width: 100%;
+    display: block;
+    text-align: right;
 }
